--- a/experiencias.html
+++ b/experiencias.html
@@ -17,6 +17,12 @@
     <label for="">Quantidade de horas</label><br>
     <input type="time" required><br><br>
 
+    <label for="">Periodo</label><br>
+    <input type="month" required><br><br>
+
+    <label for="">até</label><br>
+    <input type="month" required><br><br>
+
     <hr>
     <a href="menu.html">Voltar</a>
 </body>
