atualizado quantidade de horas

--- a/experiencias.html
+++ b/experiencias.html
@@ -15,7 +15,7 @@
     <input type="text" required><br><br>
 
     <label for="">Quantidade de horas</label><br>
-    <input type="time" required><br><br>
+    <input type="number" required><br><br>
 
     <label for="">Periodo</label><br>
     <input type="month" required><br><br>
