--- a/experiencias.html
+++ b/experiencias.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8" />
     <title>Experiências</title>
 </head>
@@ -24,6 +25,6 @@
     <input type="month" required><br><br>
 
     <hr>
-    <a href="menu.html">Voltar</a>
+    <a href="menu.html"><input type="button" value="Voltar"/></a>
 </body>
 </html>
