--- a/login.html
+++ b/login.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8" />
     <title>Sistema de Gestão de Curriculos</title>
 </head>
