Implementada tag div

--- a/dadospessoais.html
+++ b/dadospessoais.html
@@ -6,6 +6,7 @@
     <title>Dados Pessoais</title>
 </head>
 <body>
+    <div>
     <h1>Dados Pessoais</h1>
     <hr>
 
@@ -25,5 +26,7 @@
     <input type="date" required><br><br>
 
     <a href="menu.html"><input type="button" value="Voltar"/></a>
+
+    </div>
 </body>
 </html>
