--- a/experiencias.html
+++ b/experiencias.html
@@ -6,6 +6,7 @@
     <title>Experiências</title>
 </head>
 <body>
+    <div>
     <h1>Experiências</h1>
     <hr>
 
@@ -26,5 +27,7 @@
 
     <hr>
     <a href="menu.html"><input type="button" value="Voltar"/></a>
+
+    </div>
 </body>
 </html>
