--- a/formacao.html
+++ b/formacao.html
@@ -9,6 +9,7 @@
     <h1>Formação</h1>
     <hr>
 <form>
+    <div>
     <label for="">Instituição</label><br>
     <input type="text" required><br><br>
 
@@ -16,7 +17,7 @@
     <input type="text" required><br><br>
 
     <label name="r-curso">Presencial</label><br>
-    <input type="radio" ><br><br>
+    <input type="radio" ><br>
 
     <label name="r-curso">EAD</label><br>
     <input type="radio" ><br><br>
@@ -29,6 +30,8 @@
 
     <hr>
     <a href="menu.html"><input type="button" value="Voltar"/></a>
+
+    </div>
 </form>
 </body>
 </html>
