--- a/login.html
+++ b/login.html
@@ -6,7 +6,8 @@
     <title>Sistema de Gestão de Curriculos</title>
 </head>
 <body>
-  <h1>SGC - LOGIN</h1>
+  <div>
+<h1>SGC - LOGIN</h1>
   <hr>
   <form action="menu.html">
 
@@ -16,7 +17,9 @@
     <label for="">Senha</label><br>
     <input type="password" required><br><br>
     <hr>
-    <input type="reset" value="Limpar">
-    <input type="submit" value="Entrar"><br><br>
+    <input type="reset" id= "botoes" value="Limpar">
+    <input type="submit" id= "botoes" value="Entrar"><br><br>
+        
+  </div>
 </body>
 </html>
