--- a/menu.html
+++ b/menu.html
@@ -6,9 +6,9 @@
     <title>Currículo</title>
 </head>
 <body>
+    <div>
     <h1> Selecione uma opção </h1>
     <hr>
-
     <a href="dadospessoais.html"><input type="button" value="Dados Pessoais"/></a><br><br>
 
     <a href="formacao.html"><input type="button" value="Formação"/></a><br><br>
@@ -17,6 +17,6 @@
 
     <hr>
     <a href="login.html"><input type="button" value="Sair"/></a><br><br>
-
+</div>
 </body>
 </html>
