ajustado os botoes

--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <title>Sistema de Gestão de Curriculos</title>
 </head>
-<body>
+<body id="login">
   <div>
 <h1>SGC - LOGIN</h1>
   <hr>
@@ -17,8 +17,8 @@
     <label for="">Senha</label><br>
     <input type="password" required><br><br>
     <hr>
-    <input type="reset" id= "botoes" value="Limpar">
-    <input type="submit" id= "botoes" value="Entrar"><br><br>
+    <input type="reset" id= "botaoLimpar" value="Limpar">
+    <input type="submit" id= "botaoEntrar" value="Entrar"><br><br>
         
   </div>
 </body>
