--- a/formacao.html
+++ b/formacao.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <title>Formação</title>
 </head>
-<body>
+<body id="formacao">
     <h1>Formação</h1>
     <hr>
 <form>
