Criado arquivo js

--- a/formacao.html
+++ b/formacao.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <script src="scripts.js"></script>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8" />
     <title>Formação</title>
@@ -29,7 +30,7 @@
     <input type="date" required><br><br>
 
     <hr>
-    <a href="menu.html"><input type="button" value="Voltar"/></a>
+    <button onclick="abrirmenu()">Voltar</button><br><br>
 
     </div>
 </form>
