--- a/menu.html
+++ b/menu.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <script src="scripts.js"></script>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8" />
     <title>Currículo</title>
@@ -9,14 +10,15 @@
     <div>
     <h1> Selecione uma opção </h1>
     <hr>
-    <a href="dadospessoais.html"><input type="button" value="Dados Pessoais"/></a><br><br>
+    <button onclick="abrirdadospessoais()">Dados Pessoais</button><br><br>
 
-    <a href="formacao.html"><input type="button" value="Formação"/></a><br><br>
+    <button onclick="abrirformacao()">Formação</button><br><br>
 
-    <a href="experiencias.html"><input type="button" value="Experiências"/></a><br><br>
+    <button onclick="abrirexperiencias()">Experiências</button><br><br>
 
     <hr>
-    <a href="login.html"><input type="button" value="Sair"/></a><br><br>
+    <button onclick="abrirlogin()">Sair</button><br><br>
+
 </div>
 </body>
 </html>
